--- a/Lab5/Lab5.csproj
+++ b/Lab5/Lab5.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Lab5.E2</StartupObject>
+    <StartupObject>Lab5.E2Sh</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="E1.cs" />
     <Compile Include="E2.cs" />
+    <Compile Include="E2Sh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
